// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`System Lifecycle Golden Tests > Scenario 1: Organic Growth with Huge Tool Output & Images 1`] = `
{
  "finalProjection": [
    {
      "parts": [
        {
          "text": "[Continuing from previous context...]",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Nice diagram.",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Can we refactor?",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Yes we can.",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Please continue.",
        },
      ],
      "role": "user",
    },
  ],
  "tokenTrajectory": [
    {
      "tokensAfterBackground": 5,
      "tokensBeforeBackground": 5,
      "turnIndex": 0,
    },
    {
      "tokensAfterBackground": 10,
      "tokensBeforeBackground": 10,
      "turnIndex": 1,
    },
    {
      "tokensAfterBackground": 307,
      "tokensBeforeBackground": 20125,
      "turnIndex": 2,
    },
    {
      "tokensAfterBackground": 59,
      "tokensBeforeBackground": 3016,
      "turnIndex": 3,
    },
    {
      "tokensAfterBackground": 9,
      "tokensBeforeBackground": 9,
      "turnIndex": 4,
    },
  ],
}
`;

exports[`System Lifecycle Golden Tests > Scenario 2: Under Budget (No Modifications) 1`] = `
{
  "finalProjection": [
    {
      "parts": [
        {
          "text": "System Instructions",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Ack.",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Hello!",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "Hi, how can I help?",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Please continue.",
        },
      ],
      "role": "user",
    },
  ],
  "tokenTrajectory": [
    {
      "tokensAfterBackground": 5,
      "tokensBeforeBackground": 5,
      "turnIndex": 0,
    },
    {
      "tokensAfterBackground": 10,
      "tokensBeforeBackground": 10,
      "turnIndex": 1,
    },
  ],
}
`;

exports[`System Lifecycle Golden Tests > Scenario 3: Async-Driven Background GC 1`] = `
{
  "finalProjection": [
    {
      "parts": [
        {
          "text": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE",
        },
      ],
      "role": "user",
    },
    {
      "parts": [
        {
          "text": "FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF",
        },
      ],
      "role": "model",
    },
    {
      "parts": [
        {
          "text": "Please continue.",
        },
      ],
      "role": "user",
    },
  ],
  "tokenTrajectory": [
    {
      "tokensAfterBackground": 24,
      "tokensBeforeBackground": 24,
      "turnIndex": 0,
    },
    {
      "tokensAfterBackground": 48,
      "tokensBeforeBackground": 48,
      "turnIndex": 1,
    },
    {
      "tokensAfterBackground": 72,
      "tokensBeforeBackground": 72,
      "turnIndex": 2,
    },
  ],
}
`;
